trying to resolve stretched image in ipad landscape view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,7 @@ hr {
 }
 
 #contact-line {
-    border-top: 10px solid darkorange;
+    border-top: 10px dashed darkorange;
     width: 50%;
     margin-left: 25%;
 
